--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -10,7 +10,14 @@
       "name": "m00n",
       "avatar_url": "https://avatars.githubusercontent.com/u/18633264?v=4",
       "profile": "https://github.com/lalalune",
-      "contributions": ["code", "design", "art"]
+      "contributions": ["design"]
+    },
+    {
+      "login": "Bluepulasky",
+      "name": "Tomas Manrique",
+      "avatar_url": "https://avatars.githubusercontent.com/u/58783627?v=4",
+      "profile": "https://github.com/Bluepulasky",
+      "contributions": ["design"]
     }
   ],
   "contributorsPerLine": 7,
@@ -20,3 +27,4 @@
   "repoHost": "https://github.com",
   "skipCi": true
 }
+
